components/curl/networkpolicies.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: default-deny-egress
spec:
  podSelector: {}
  policyTypes:
    - Egress
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-istio-egress-control
spec:
  podSelector: {}
  egress:
    - to:
        - ipBlock:
            cidr: 10.128.0.0/14 # oc get network cluster -o=jsonpath='{.spec.clusterNetwork[0].cidr}'
            # cidr: 10.217.0.0/22 # crc
  policyTypes:
    - Egress
